# kinetic-risk-ontology

./: .dockerignore  .env.example  .gitignore  PRD.md  README.md  docker-compose.yml  ruff.toml
.github/workflows/: ci.yml
apps/honesty-layer/: Dockerfile  pyproject.toml
apps/honesty-layer/src/kro_honesty/: __init__.py  __main__.py
data/: curated_markets.json
docs/: CYPPER_QUERIES.md
infra/grafana/dashboards/: kro-main.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/grafana/provisioning/datasources/: timescaledb.yml
infra/neo4j/: init.cypher
infra/timescaledb/: init.sql
libs/kro_common/: pyproject.toml
libs/kro_common/src/kro_common/: __init__.py  bus.py  config.py  db.py  logging.py  types.py
scripts/: bootstrap.sh  push_alerts_to_neo4j.py  seed_demo_alert.sh
services/chain-collector/: Dockerfile  pyproject.toml
services/chain-collector/src/kro_chain_collector/: __init__.py  __main__.py
services/entity-resolution/: Dockerfile  pyproject.toml
services/entity-resolution/src/kro_entity_resolution/: __init__.py  __main__.py
services/kinetic-risk/: Dockerfile  pyproject.toml
services/kinetic-risk/src/kro_kinetic_risk/: __init__.py  __main__.py
services/kinetic-risk/tests/: test_engine.py
services/market-collector/: Dockerfile  pyproject.toml
services/market-collector/src/kro_market_collector/: __init__.py  __main__.py  curation.py
services/ontology-loader/: Dockerfile  pyproject.toml
services/ontology-loader/src/kro_ontology_loader/: __init__.py  (+1 more)
services/positions-collector/: Dockerfile  pyproject.toml
(+2 files in other folders)
